--- a/web/src/style/plan.css
+++ b/web/src/style/plan.css
@@ -7,3 +7,11 @@ li a:hover {
     color: #158033;
     text-decoration: underline;
 }
+
+.done li::marker {
+    content: '✔ ';
+}
+
+.todo li::marker {
+    content: '✖ ';
+}
