--- a/web/src/style/plan.css
+++ b/web/src/style/plan.css
@@ -15,3 +15,28 @@ li a:hover {
 .todo li::marker {
     content: '✖ ';
 }
+
+.scrollbar {
+  overflow-y: scroll;
+}
+
+.scrollbar-success {
+  scrollbar-color: #005618 #000000;
+}
+
+.scrollbar-success::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.1);
+  background-color: #000000;
+  border-radius: 10px;
+}
+  
+.scrollbar-success::-webkit-scrollbar {
+  width: 10px;
+  background-color: #000000;
+}
+  
+.scrollbar-success::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.1);
+  background-color: #005618;
+}
